tests/ui/lang/consts/nested-ref-in-composite.stderr
error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:20:17
   |
20 |     *pair_out = pair_deep_load(&(&123, &3.14));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within `nested_ref_in_composite::main_pair`
  --> $DIR/nested-ref-in-composite.rs:20:17
   |
20 |     *pair_out = pair_deep_load(&(&123, &3.14));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main_pair`
  --> $DIR/nested-ref-in-composite.rs:19:8
   |
19 | pub fn main_pair(pair_out: &mut (u32, f32)) {
   |        ^^^^^^^^^

error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:25:19
   |
25 |     *array3_out = array3_deep_load(&[&0, &1, &2]);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within `nested_ref_in_composite::main_array3`
  --> $DIR/nested-ref-in-composite.rs:25:19
   |
25 |     *array3_out = array3_deep_load(&[&0, &1, &2]);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main_array3`
  --> $DIR/nested-ref-in-composite.rs:24:8
   |
24 | pub fn main_array3(array3_out: &mut [u32; 3]) {
   |        ^^^^^^^^^^^

error: aborting due to 2 previous errors

